<resources>
    <string name="app_name">Instagram Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">Home</string>
    <string name="nav_option1">Opt 1</string>
    <string name="nav_option2">Opt 2</string>
    <string name="nav_option3">Opt 3</string>
    <string name="nav_option4">Opt 4</string>
    <string name="nav_option5">Opt 5</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_singin">Sign In</string>
    <string name="login_signin_forgot">Forgot password?</string>
    <string name="login_create_account">Create an account</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="password_text">It\'s ok, reset your password</string>
    <string name="password_continue">Continue</string>
    <string name="password_sent_code">Check your inbox email, we sent a code verification</string>
    <string name="code">Code</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="yeah">Ohh yeah!</string>
    <string name="password_long_text">Your password has been reset successfully.\nNow login with your new password
    </string>
    <string name="login_signup">Sign up</string>
    <string name="tipsters_follower">Followers</string>
    <string name="tipsters_rate">Win Rate</string>
    <string name="tipsters_rating">Rating</string>
    <string name="tipsters_tips">Tips</string>
    <string name="tipsters_odds">Odds</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tipsters">Tipsters</string>
    <string name="email_required">Email Required</string>
    <string name="password_required">Password Required</string>
    <string name="rest_url">http://localhost:8000/</string>
    <string name="password_min_8">Min Length 8 characters</string>
    <string name="email_bad_format">Email format not valid</string>
    <string name="tips_odds">Odds :</string>
    <string name="tips_stake">Stake</string>
    <string name="settings_welcome">Welcome</string>
    <string name="settings_version">Version</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_advertise">Advertise With Us</string>
    <string name="settings_feedback">Send Feedback</string>
    <string name="settings_rate">Rate This App</string>
    <string name="settings_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="settings_preferences">Preferences</string>
    <string name="premium">Premium</string>
    <string name="code_validate">Validate</string>
    <string name="login_now">Now you can connect</string>
    <string name="code_required">Code required</string>
    <string name="password_different">New and Confirmation Password are diferents</string>
    <string name="password_successfull">Password successfully changed</string>
    <string name="url_terms_conditions">https://goldenplaybets.com/privacy-policy/</string>
    <string name="url_premium">http://stimpy-15896.herokuapp.com/#/</string>
    <string name="be_premium">Be Premium</string>
    <string name="tipsters_detail">Bet Detail</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name_required">Last name is required</string>
    <string name="first_name_required">First name is required</string>
    <string name="password_not_equals">Password fields are not equals</string>
    <string name="password_bad_format">Password format no valid.</string>
    <string name="title_search">Search</string>
    <string name="title_add">New Post</string>
    <string name="title_likes">Likes</string>
    <string name="title_friends">Contacts</string>
    <string name="title_profile">My Profile</string>
    <string name="profile_update">Update Profile</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="picture_gallery">From gallery</string>
    <string name="picture_camera">Take photo</string>

</resources>
