<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.views.ProfileFragment"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/llProfileEditor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        android:padding="@dimen/login_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textSize="@dimen/login_signin_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/profile_email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColorHint="@color/primaryLightColor"
            android:textColor="@color/primaryLightColor"
            android:focusable="false"
            android:textIsSelectable="true"/>

        <EditText
            android:id="@+id/profile_first_name"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColorHint="@color/primaryLightColor"
            android:textColor="@color/primaryLightColor"/>

        <EditText
            android:id="@+id/profile_last_name"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColorHint="@color/primaryLightColor"
            android:textColor="@color/primaryLightColor"/>

        <EditText
            android:id="@+id/profile_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColorHint="@color/primaryLightColor"
            android:textColor="@color/primaryLightColor"/>

        <EditText
            android:id="@+id/profile_confirm_password"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColorHint="@color/primaryLightColor"
            android:textColor="@color/primaryLightColor"/>

        <ProgressBar
            android:id="@+id/profileProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_weight="1"
            android:visibility="gone"/>

        <Button
            android:id="@+id/profile_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_update"
            android:elevation="12dp"
            android:background="@drawable/round_button"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColor="#FFF"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llProfileViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        android:padding="@dimen/login_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textSize="@dimen/login_signin_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_profile_email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColorHint="@color/primaryLightColor"
            android:textColor="@color/primaryLightColor"
            android:focusable="false"
            android:textIsSelectable="true"/>

        <TextView
            android:id="@+id/tv_profile_name"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColorHint="@color/primaryLightColor"
            android:textColor="@color/primaryLightColor"/>

        <Button
            android:id="@+id/profile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit"
            android:elevation="12dp"
            android:background="@drawable/round_button"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_padding_top"
            android:textColor="#FFF"
            android:textAllCaps="false"/>

    </LinearLayout>

</FrameLayout>