<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.views.LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@drawable/logo"
            android:padding="@dimen/login_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical"
            android:layout_weight="4"
            android:padding="@dimen/login_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textSize="@dimen/password_text_size"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"/>

            <EditText
                android:id="@+id/resetpass_email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:paddingTop="@dimen/login_padding_top"
                android:textColorHint="@color/primaryLightColor"
                android:textColor="@color/primaryLightColor"/>

            <ProgressBar
                android:id="@+id/resetpassProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_weight="1"
                android:visibility="gone"/>

            <Button
                android:id="@+id/password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_continue"
                android:elevation="12dp"
                android:background="@drawable/round_button"
                android:layout_weight="1"
                android:textColor="#FFF"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>